# Resume-Shortlisting

./: .dockerignore  README.md  api.py  pyproject.toml  requirements.txt
src/resume_shortlisting/: main.py
